Each crystal has now been assigned a random number for the game and that number will now be pushed into the #score.

--- a/index.html
+++ b/index.html
@@ -28,9 +28,14 @@
         <p id="losses"></p>
     </div>
     
-    <div id="crystals"></div>
+    <div id="crystals">
+        <img src="http://clipground.com/images/berg-crystal-clipart-19.jpg" alt="red diamond" height= 70px id="diamond">
+        <img src="http://www.clker.com/cliparts/Z/y/B/N/V/a/blue-gem-stones-hi.png" alt="blue crystals" height= 90px id="blueCrystal">
+        <img src="http://clipart-library.com/data_images/101884.png" alt="green crystal" height= 70px id="greenCrystal">
+        <img src="https://gallery.yopriceville.com/var/albums/Free-Clipart-Pictures/Jewelry-and-Diamonds-PNG/Yellow_Gem_PNG_Clip_Art_Image.png?m=1466391301" alt="yellow crystal" height= 70px id="yellowCrystal">
+    </div>
 
-    <p>Your total score is: </p>
+    <p id="total">Your total score is: </p>
 
     <div id="score"></div>
     
