Game is fully functiong except for the score counter, does not add score once crystals are clicked.CSS looking good.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Crystal Collector Game</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Lobster|Montserrat|Poppins&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Covered+By+Your+Grace|Indie+Flower|Lobster|Montserrat|Poppins&display=swap" rel="stylesheet">    
     <link rel="stylesheet" type="text/css" href="assets\css\reset.css">
 </head>
 
@@ -23,7 +23,7 @@
 
 
         <div class="row justify-content-center">
-            <div class="col-md-8">
+            <div class="col-md-10">
                 <p id="rules">
                     You will be given a random number at the start of the game.
                     <br>
@@ -48,7 +48,7 @@
                 <div id="number"></div>
             </div>
 
-            <div class="col-md-2" id="scoreboard">
+            <div class="col-md-3" id="scoreboard">
                 <p id="wins"></p>
                 <p id="losses"></p>
             </div>
@@ -56,23 +56,23 @@
 
 
         <div class="row justify-content-center">
-            <div class="col-md-4">
+            <div class="col-md-12">
                 <div id="crystals">
-                    <img src="http://clipground.com/images/berg-crystal-clipart-19.jpg" alt="red diamond" height=70px
+                    <img src="http://clipground.com/images/berg-crystal-clipart-19.jpg" alt="red diamond" height=90px
                         id="diamond">
                     <img src="http://www.clker.com/cliparts/Z/y/B/N/V/a/blue-gem-stones-hi.png" alt="blue crystals"
-                        height=90px id="blueCrystal">
-                    <img src="http://clipart-library.com/data_images/101884.png" alt="green crystal" height=70px
+                        height=120px id="blueCrystal">
+                    <img src="http://clipart-library.com/data_images/101884.png" alt="green crystal" height=100px
                         id="greenCrystal">
                     <img src="https://gallery.yopriceville.com/var/albums/Free-Clipart-Pictures/Jewelry-and-Diamonds-PNG/Yellow_Gem_PNG_Clip_Art_Image.png?m=1466391301"
-                        alt="yellow crystal" height=70px id="yellowCrystal">
+                        alt="yellow crystal" height=90px id="yellowCrystal">
                 </div>
             </div>
         </div>
 
 
         <div class="row justify-content-center">
-            <div class="col-md-2">
+            <div class="col-md-3">
                 <p id="total">Your total score is: </p>
             </div>
         </div>
